[package]
name = "unsafe_fn_body"
version = "0.1.1"
authors = ["vSylva"]
edition = "2021"
description = "Wrap the function body in an unsafe block using attribute macros"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/vSylva/unsafe_fn_body"
repository = "https://github.com/vSylva/unsafe_fn_body"

[lib]
proc-macro = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.49", features = ["full"] }
